--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-< html >
-  < cabeça >
-    < script  src = " https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js " > </ script >
-    < script  src = " sketch.js " > </ script >
-    < script  src = " matrix.js " > </ script >
-    < script  src = " RedeNeural.js " > </ script >
-  </ head >
-  < corpo >
-  </ body >
-</ html >
+<html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
+    <script src="sketch.js"></script>
+    <script src="matrix.js"></script>
+    <script src="RedeNeural.js"></script>
+  </head>
+  <body>
+  </body>
+</html>
